[package]
name = "test-sf-imgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#imgui-sfml-support = "0.1.3"
#sfml = "0.21.0"

# change these lines
#sfml = "0.21.0"
#imgui-sfml-support = "0.1.1"
# to these lines
sfml = { git = "https://github.com/jeremyletang/rust-sfml.git" }
imgui-sfml-support = { git = "https://github.com/truenotzero/imgui-sfml-support.git", branch = "workaround" }
imgui = "0.11.0"
image = "0.24.7"
clipboard = "0.5.0"
